--- a/css/style.css
+++ b/css/style.css
@@ -215,3 +215,28 @@ body {
     background: #4aaaa5;
     border: 0 none;
   }
+
+  @media screen and (max-width: 640px) {
+    #logo {
+      float: none;
+      width: 100%;
+      height: 100px; 
+      font-weight: 700;
+      line-height: 90px;
+      position: static;
+      margin-top: -20px;
+     
+    }
+   nav {
+    float: none;
+    margin-top: 40px;
+    }
+
+   nav a {
+    display: inline-block;
+    padding: 10px;
+    margin-top: 20px;
+    border-left: 1px solid #efefef;
+    }
+
+  }
