--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ body {
     font-size: 18px;
     line-height: 34px;
     color: #777777;
-    background: url("../images/concrete_seamless.png");
+    background: url("../images/gravel.png");
   }
   
   * {
@@ -215,28 +215,61 @@ body {
     background: #4aaaa5;
     border: 0 none;
   }
+   /* media */
 
   @media screen and (max-width: 640px) {
-    #logo {
-      float: none;
+    .container {
       width: 100%;
-      height: 100px; 
-      font-weight: 700;
-      line-height: 90px;
+  
+    }
+  
+    #logo {
+      float: right;
+      width: 100%;
+      height: 70px;
       position: static;
-      margin-top: -20px;
+      margin-top: 0;
+      margin-left: 0;
+  
      
     }
    nav {
     float: none;
-    margin-top: 40px;
+    margin: 0;
+    width: 100%;
+    height: 120px;
+    padding: 60px
     }
 
    nav a {
-    display: inline-block;
-    padding: 10px;
-    margin-top: 20px;
-    border-left: 1px solid #efefef;
+    text-align: center;
+    float: none;
+    padding: 5px;
+    margin-top: 0;
+    margin-left: 50px;
+    line-height: 40px;
     }
 
+  .main-section {
+      float: none;
+      width: 100%;
+      padding: 10px;
+      margin: 10px 0 15px;
+      font-size: 20px;
+    }
+
+  #main-container {
+    padding: 20px;
+    padding-top: 130px;
+    min-height: calc(100vh - 60px);
+  }
+
+  .auth-image {
+    width: 420px;
+    height: auto;
+    float: none;
+    
+  }
+
+  p
   }
