--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-body {
+ body {
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     font-size: 18px;
     line-height: 34px;
@@ -223,7 +223,7 @@ body {
   
     }
   
-    #logo {
+  #logo {
       float: right;
       width: 100%;
       height: 70px;
@@ -235,14 +235,13 @@ body {
     }
    nav {
     float: none;
-    margin: 0;
+    margin-top: 0;
     width: 100%;
     height: 120px;
-    padding: 60px
+    padding-left: 60px
     }
 
    nav a {
-    text-align: center;
     float: none;
     padding: 5px;
     margin-top: 0;
@@ -259,8 +258,8 @@ body {
     }
 
   #main-container {
-    padding: 20px;
-    padding-top: 130px;
+    padding: 10px;
+    padding-top: 10px;
     min-height: calc(100vh - 60px);
   }
 
@@ -268,8 +267,64 @@ body {
     width: 420px;
     height: auto;
     float: none;
+    margin-left: 60px;
     
   }
+  
+  #masthead {
+    position: static;
+    width: 100%;
+    margin: 0;
+    }
 
-  p
+  footer {
+    margin-top: 150px;
   }
+  }
+
+  @media screen and (max-width: 768px) {
+    #masthead {
+      position: static;
+      width: 100%;
+      margin: 0;
+    }
+
+    .main-section {
+      float: none;
+      width: 100%;
+      padding: 10px;
+      margin: 10px 0 15px;
+      font-size: 20px;
+    }
+    
+    .container {
+      width: 100%;
+  
+    }
+
+    #main-container {
+      padding: 10px;
+      padding-top: 10px;
+      min-height: calc(100vh - 60px);
+    }
+
+    nav a {
+      display: inline-block;
+      padding-left: 5px;
+      margin-left: 10px;
+      line-height: 18px;
+     
+    }
+
+    footer {
+      margin-top: 350px;
+    }
+  }
+
+  @media screen and (max-width: 980px) {
+
+
+
+
+  }
+
